--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8080
+server.address=localhost
 
+# MySQL configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/lockio
+spring.datasource.username=dev
+spring.datasource.password=password
+
+# Parameters used for debugging
+spring.logging.level.org.hibernate.SQL=debug
+spring.jpa.show-sql=true
