add: jpa tests (lockio & locker)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/lockio
 spring.datasource.username=dev
 spring.datasource.password=password
 
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=create-drop
+
 # Parameters used for debugging
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
