add: swagger dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # Parameters used for debugging
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
+
+# Swagger address for api doc : http://localhost:8080/swagger-ui/index.html#/
