--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,8 @@ server.port=8080
 server.address=localhost
 
 # MySQL configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/lockio
-spring.datasource.username=dev
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_7bf498755bc3e50
+spring.config.import=optional:secrets.properties
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=create-drop
