--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.address=localhost
 
 # MySQL configuration
 spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_7bf498755bc3e50
-spring.config.import=optional:secrets.properties
+spring.datasource.user=${USER}
+spring.datasource.password=${PASSWORD}
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=create-drop
