add: sql script to populate tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password=password
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 # Parameters used for debugging
 spring.logging.level.org.hibernate.SQL=debug
